@@ -1,4 +1,10 @@
 #!/bin/bash
-cd /opt/UniFi
-java -jar lib/ace.jar start
+cd /usr/lib/unifi
+java \
+    --add-opens java.base/java.lang=ALL-UNNAMED \
+    --add-opens java.base/java.time=ALL-UNNAMED \
+    --add-opens java.base/sun.security.util=ALL-UNNAMED \
+    --add-opens java.base/java.io=ALL-UNNAMED \
+    --add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED \
+     -jar lib/ace.jar start
 kill -9 $(pgrep bash)
